sites/akron/apps/network-optimizer/eastbank/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: network-optimizer
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`network-optimizer-eastbank.${HOSTNAME}`)
      kind: Rule
      services:
        - name: network-optimizer-eastbank
          port: 8042
